--- a/ver/0.1/mdoc.css
+++ b/ver/0.1/mdoc.css
@@ -143,6 +143,8 @@ body {
 
     margin-left: auto;
     margin-right: auto;
+    margin-top: 40px;
+    margin-bottom: 40px;
 
     border-radius: 5px;
 }
