--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,11 @@
     <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 
     <!-- marked -->
-    <script src="http://chutsu.github.io/mdoc/ver/VER/marked.js"></script>
+    <script src="http://chutsu.github.io/ditto/ver/VER/marked.js"></script>
 
-    <!-- mdoc -->
-    <script src="http://chutsu.github.io/mdoc/ver/VER/mdoc.js"></script>
-    <link rel="stylesheet" href="http://chutsu.github.io/mdoc/ver/VER/mdoc.css">
+    <!-- ditto -->
+    <script src="http://chutsu.github.io/ditto/ver/VER/ditto.js"></script>
+    <link rel="stylesheet" href="http://chutsu.github.io/ditto/ver/VER/ditto.css">
 </head>
 <body>
     <!-- essential -->
@@ -25,14 +25,14 @@
 
     <script>
         // essential settings
-        mdoc.index = "README.md",
-        mdoc.sidebar_file = "sidebar.md",
+        ditto.index = "README.md",
+        ditto.sidebar_file = "sidebar.md",
 
         // where the docs are actually stored on github - so you can edit
-        mdoc.base_url = "";  // <------- EDIT ME!!
+        ditto.base_url = "";  // <------- EDIT ME!!
 
         // run
-        mdoc.run();
+        ditto.run();
     </script>
 </body>
 </html>
