Remove protocol for external libraries

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,15 +2,15 @@
 <html>
 <head>
     <!-- jQuery -->
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 
     <!-- marked -->
-    <script src="http://chutsu.github.io/ditto/ver/VER/marked.js"></script>
+    <script src="//chutsu.github.io/ditto/ver/VER/marked.js"></script>
 
     <!-- ditto -->
-    <script src="http://chutsu.github.io/ditto/ver/VER/ditto.js"></script>
-    <link rel="stylesheet" href="http://chutsu.github.io/ditto/ver/VER/ditto.css">
+    <script src="//chutsu.github.io/ditto/ver/VER/ditto.js"></script>
+    <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/VER/ditto.css">
 </head>
 <body>
     <!-- essential -->
