--- a/css/ditto.css
+++ b/css/ditto.css
@@ -99,6 +99,10 @@ body {
     border-radius: 5px;
 }
 
+#content pre code {
+        padding-left: 0;
+}
+
 #content code {
     padding-left: 5px;
     padding-right: 5px;
@@ -239,4 +243,37 @@ body {
     margin-left: 560px;
 
     font-size: 14px;
+}
+
+input[type=search] {
+    display: block;
+    width: 180px;
+
+    text-align: left;
+}
+
+.search_results{
+
+
+}
+
+.fragments {
+    margin: 0;
+    padding: 0;
+}
+
+.search_results .link {
+    margin-top: 35px;
+}
+
+#content ul .fragments li:before {
+    content: "";
+    position: relative;
+    left: 0px;
+}
+
+#content ul li.fragment:before {
+    content: "";
+    margin: 0;
+    padding: 0;
 }
