--- a/templates/index.html
+++ b/templates/index.html
@@ -21,15 +21,19 @@
     <div id="back_to_top">back to top</div>
     <div id="edit">edit</div>
     <div id="loading">Loading ...</div>
-    <div id="error">Opps! ... File not found!</div>
+    <div id="error"></div>
 
     <script>
         // essential settings
         ditto.index = "README.md",
         ditto.sidebar_file = "sidebar.md",
 
+        // optional settings if you want github search
+        ditto.github_username = null;   // <------- EDIT ME!!
+        ditto.github_repo = null;       // <------- EDIT ME!!
+
         // where the docs are actually stored on github - so you can edit
-        ditto.base_url = "";  // <------- EDIT ME!!
+        ditto.base_url = "";            // <------- EDIT ME!!
 
         // run
         ditto.run();
