--- a/ver/0.1/ditto.css
+++ b/ver/0.1/ditto.css
@@ -89,18 +89,25 @@ body {
 #content pre {
     margin-left: auto;
     margin-right: auto;
+
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 13px;
+    padding-right: 13px;
 
     color: #FFF;
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
 
     background: #444;
     border-radius: 5px;
 }
 
 #content pre code {
-        padding-left: 0;
+    padding-left: 0;
 }
 
 #content code {
@@ -243,6 +250,7 @@ body {
     margin-left: 560px;
 
     font-size: 14px;
+    font-weight: bold;
 }
 
 input[type=search] {
