--- a/css/ditto.css
+++ b/css/ditto.css
@@ -102,7 +102,7 @@ body {
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
 
-    background: #444;
+    background: #F8F8F8;
     border-radius: 5px;
 }
 
@@ -114,12 +114,12 @@ body {
     padding-left: 5px;
     padding-right: 5px;
 
-    color: #FFF;
+    color: #222;
     font-size: 10px;
     font-weight: normal;
     font-family: Consolas, monospace;
 
-    background: #444;
+    background: #F8F8F8;
     border-radius: 2px;
 }
 
