Update hr style

--- a/css/ditto.css
+++ b/css/ditto.css
@@ -147,6 +147,13 @@ body {
     border-top: 1px dotted #777;
 }
 
+#content hr {
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
 #content img {
     max-width: 90%;
     display: block;
