--- a/ver/latest/ditto.css
+++ b/ver/latest/ditto.css
@@ -195,7 +195,7 @@ body {
     text-decoration: none;
 }
 
-#back_to_top {
+#back_to_top, #edit {
     display: none;
     position: fixed;
 
@@ -216,33 +216,7 @@ body {
     background-color: #AAA;
 }
 
-#back_to_top:hover {
-    background-color: #444;
-    cursor: pointer;
-}
-
-#edit {
-    display: none;
-    position: fixed;
-
-    height: 20px;
-    width: 70px;
-    top: 50px;
-
-    margin-left: 890px;
-    padding-top: 2px;
-
-    color: #FFF;
-    vertical-align: middle;
-    text-align: center;
-    font-size: 10px;
-
-
-    border-radius: 5px;
-    background-color: #AAA;
-}
-
-#edit:hover {
+#back_to_top:hover, #edit:hover {
     background-color: #444;
     cursor: pointer;
 }
