--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 
     <!-- DITTO CSS -->
     <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/VER/ditto.css">
-    <script src="//chutsu.github.io/ditto/ver/VER/js/ditto.js"></script>
+    <script src="//chutsu.github.io/ditto/ver/VER/ditto.js"></script>
 </head>
 <body>
     <!-- ESSENTIAL -->
