Fix code highlight

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,15 @@
     <title>TITLE</title>  <!-- EDIT ME!! -->
 
     <!-- JQUERY -->
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 
     <!-- MARKED -->
     <script src="//chutsu.github.io/ditto/ver/VER/marked.js"></script>
+
+    <!-- HIGHLIGHT.JS -->
+    <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/VER/github.css">
+    <script src="//chutsu.github.io/ditto/ver/VER/highlight.js"></script>
 
     <!-- DITTO CSS -->
     <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/VER/ditto.css">
@@ -36,6 +40,7 @@
           // optional settings if you want github search
           ditto.github_username = null;   // <------- EDIT ME!!
           ditto.github_repo = null;       // <------- EDIT ME!!
+          ditto.highlight_code = true;    // <------- EDIT ME!!
 
           // where the docs are actually stored on github - so you can edit
           // e.g. https://github.com/chutsu/ditto/edit/gh-pages
