add folder and file extension config

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,8 +34,8 @@
     <script>
         $(function($) {
           // essential settings
-          ditto.index = "README.md",
-          ditto.sidebar_file = "sidebar.md",
+          ditto.index = "README",
+          ditto.sidebar_file = "sidebar",
 
           // optional settings if you want github search
           ditto.github_username = null;   // <------- EDIT ME!!
