--- a/ver/latest/ditto.css
+++ b/ver/latest/ditto.css
@@ -105,6 +105,8 @@ body {
 }
 
 #content pre code {
+    padding-top: 0px;
+    padding-bottom: 0px;
     padding-left: 0;
     font-size: 1.1em;
     border: none;
